--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
 
+    Hej
+
     <style>
         .nav-link.active:hover {
             color: blue !important;
